--- a/NetCoreBookStore/NetCoreBookStore.csproj
+++ b/NetCoreBookStore/NetCoreBookStore.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="wwwroot\content\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
   <ItemGroup>
