--- a/NetCoreBookStore/NetCoreBookStore.csproj
+++ b/NetCoreBookStore/NetCoreBookStore.csproj
@@ -6,8 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="wwwroot\content\" />
-    <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\content\img\" />
   </ItemGroup>
 
   <ItemGroup>
