--- a/NetCoreBookStore.Data/NetCoreBookStore.Data.csproj
+++ b/NetCoreBookStore.Data/NetCoreBookStore.Data.csproj
@@ -7,6 +7,10 @@
   <ItemGroup>
     <Compile Remove="Migrations\20200728232514_Init.cs" />
     <Compile Remove="Migrations\20200728232514_Init.Designer.cs" />
+    <Compile Remove="Migrations\20200730013629_BookImageAdded.cs" />
+    <Compile Remove="Migrations\20200730013629_BookImageAdded.Designer.cs" />
+    <Compile Remove="Migrations\20200730014404_BookImageAdded.cs" />
+    <Compile Remove="Migrations\20200730014404_BookImageAdded.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
