Swap core and data layer

--- a/NetCoreBookStore.Core/NetCoreBookStore.Service.csproj
+++ b/NetCoreBookStore.Core/NetCoreBookStore.Service.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NetCoreBookStore.Data\NetCoreBookStore.Data.csproj" />
+    <ProjectReference Include="..\NetCoreBookStore.Data\NetCoreBookStore.Core.csproj" />
   </ItemGroup>
 
 </Project>
