--- a/NetCoreBookStore.Core/NetCoreBookStore.Core.csproj
+++ b/NetCoreBookStore.Core/NetCoreBookStore.Core.csproj
@@ -1,17 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Remove="Migrations\20200728232514_Init.cs" />
-    <Compile Remove="Migrations\20200728232514_Init.Designer.cs" />
-    <Compile Remove="Migrations\20200730013629_BookImageAdded.cs" />
-    <Compile Remove="Migrations\20200730013629_BookImageAdded.Designer.cs" />
-    <Compile Remove="Migrations\20200730014404_BookImageAdded.cs" />
-    <Compile Remove="Migrations\20200730014404_BookImageAdded.Designer.cs" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.6" />
@@ -22,6 +13,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.6" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.6" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
