add mail service + send register confirmation mail

--- a/NetCoreBookStore/appsettings.Development.json
+++ b/NetCoreBookStore/appsettings.Development.json
@@ -1,9 +1,20 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=NetCoreBookStore;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "MailSettings": {
+    "Mail": "minhhiena712.mailservicetest@gmail.com",
+    "DisplayName": "My Local Mail Service",
+    "Password": "minhhien123x",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
