--- a/NetCoreBookStore/appsettings.json
+++ b/NetCoreBookStore/appsettings.json
@@ -9,5 +9,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MailSettings": {
+    "Mail": "<email>",
+    "DisplayName": "<displayname>",
+    "Password": "<password>",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  }
 }
